--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,6 +45,11 @@
   padding: 0;
 }
 
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   font-family: var(--font-family);
   font-size: var(--font-size-base);
@@ -53,6 +58,8 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  overflow: hidden;
 }
 
 button {
